simplify templates in chat client

--- a/chat/chat-client/tools/public/design.html
+++ b/chat/chat-client/tools/public/design.html
@@ -5,13 +5,9 @@
     <h1>Design! <small>User interface templates</small></h1>
   </div>
   <div class="section panel">
-    <h2>Common</h2>
+    <h2>Chat Templates</h2>
     <ul>
-      <li><a href="/design/styleguide.html">Styleguide</a></li>
-    </ul>
-    <h2>sample</h2>
-    <ul>
-      <li><a href="/design/chat-client/sample.html">sample Page</a></li>
+      <li><a href="/design/chat-client.html">Chat Client</a></li>
     </ul>
 
   </div>
