Copy and rename helloworld-ui to helloworld-app

--- a/helloworld-app/tools/public/index.html
+++ b/helloworld-app/tools/public/index.html
@@ -2,7 +2,7 @@
 
 <div id="content">
   <div class="hero-unit">
-    <h1>helloworld-ui</h1>
+    <h1>helloworld-app</h1>
     <p>
       Congratulations! You have created and run a new Pedestal UI
       project.
