--- a/helloworld-app/tools/public/design.html
+++ b/helloworld-app/tools/public/design.html
@@ -5,9 +5,9 @@
     <h1>Design! <small>User interface templates</small></h1>
   </div>
   <div class="section panel">
-    <h2>helloworld-ui</h2>
+    <h2>helloworld-app</h2>
     <ul>
-      <li><a href="/design/helloworld-ui.html">helloworld-ui Page</a></li>
+      <li><a href="/design/helloworld-app.html">helloworld-app Page</a></li>
     </ul>
 
   </div>
