Fix links section in README and add submit button to form

--- a/ring-middleware/src/hello-form.html
+++ b/ring-middleware/src/hello-form.html
@@ -7,6 +7,7 @@
       <form action="/introduce" method="POST">
         <label for="name">Name</label>
         <input type="text" name="name"/>
+	<input type="submit" name="submit" />
       </form>
       <p>
         Alternatively, visit the <a href="/hello">greeting page</a> to see who I think you are.
