Fix links in README.md, add better console output to embedded js

--- a/cors/src/blob.html
+++ b/cors/src/blob.html
@@ -2,7 +2,7 @@
 <script type="text/javascript" src="https://raw.github.com/Yaffle/EventSource/master/eventsource.js" ></script>
 
 <script type="text/javascript">
-console.log("Starting event listener!");
+console.log("Starting event listener for http://localhost:8081/");
 
 var source = new EventSource('http://localhost:8081/');
 
