--- a/helloworld-app/tools/public/design.html
+++ b/helloworld-app/tools/public/design.html
@@ -1,4 +1,4 @@
-<_within file="application.html">
+<_within file="tooling.html">
 
 <div id="content" style="width:960px;margin: 0 auto;">
   <div class="page-header">
