--- a/helloworld-app/tools/public/index.html
+++ b/helloworld-app/tools/public/index.html
@@ -1,40 +1,61 @@
-<_within file="application.html">
+<_within file="tooling.html">
 
 <div id="content">
   <div class="hero-unit">
     <h1>helloworld-app</h1>
     <p>
-      Congratulations! You have created and run a new Pedestal UI
-      project.
+      Congratulations! You have created and run a new Pedestal
+      application.
     </p>
     <p class="small">
       Hover over the lower right corner of each page to activate the
       control panel. In each view, update source files and then reload
-      the page to compile and see changes.
+      the page to build and see changes. The items that appear in the
+      control panel can be configured in <code>config/config.clj</code>.
+    </p>
+
+    <p class="small" style="font-weight:bold">
+      Start working on your application by writing its behavior in the
+      file <code>app/src/helloworld_app/behavior.clj</code>.
     </p>
 
     <h4>Design</h4>
     <small>
-      View the <a href="/design.html">styleguide</a> and
-      all <a href="/design.html">design</a> templates. Source files
-      are located in the <code>templates</code> directory.
+      View template files located
+      in <code>app/templates</code>. Update the design page by editing
+      the file <code>tools/public/design.html</code>.
+    </small>
+    <h4>Data UI</h4>
+    <small>
+      After creating application behavior, run the application in the
+      browser using the data renderer. The data renderer is setup in
+      the file <code>app/src/helloworld_app/simulated/start.clj</code>.
+    </small>
+    <h4>Render</h4>
+    <small>
+      The data renderer allows you to record the data which is sent to
+      a renderer. The Render view allows you to play back these
+      recordings. Configure the renderer to use
+      in <code>config/config.clj</code>.
     </small>
     <h4>Development</h4>
     <small>
-      <a href="/development">Compile and run</a> the application in
-      development mode.
+      The development view allows you do run your application with a
+      real renderer and feeder. This application is created in
+      <code>app/src/helloworld_app/start.clj</code>. The application
+      will be compiled in development mode for easier debugging.
     </small>
     <h4>Fresh</h4>
     <small>
-      <a href="/fresh">Load a page with a ClojureScript REPL client</a> and
-      no application code. Use this view to experiment from the REPL
-      without running your application. Before you go to this page,
+      Load a page with a ClojureScript REPL client and no application
+      code. Use this view to experiment from the REPL without running
+      your application. Before you go to this page,
       run <code>(cljs-repl)</code> to start the server side of the
       REPL connection.
     </small>
     <h4>Production</h4>
     <small>
-      <a href="/production">Compile and run</a> the application in advanced mode.
+      Run your application with advanced compilation.
     </small>
   </div>
 </div>
