chat cleanup - tweaks to be consistent with old version

--- a/chat/new-client/tools/public/design.html
+++ b/chat/new-client/tools/public/design.html
@@ -5,7 +5,7 @@
     <h1>Design! <small>User interface templates</small></h1>
   </div>
   <div class="section panel">
-    <h2>chat-client</h2>
+    <h2>Chat Templates</h2>
     <ul>
       <li><a href="/design/chat-client.html">chat-client Page</a></li>
     </ul>
