update chat client to use v2 dataflow
This new version was made by generating a new pedestal 0.1.10 app
and rewriting behavior.clj from scratch. The remaining components
were mostly copied verbatim and then modified when updating topics to be
in a vector format.

--- a/chat/chat-client/tools/public/design.html
+++ b/chat/chat-client/tools/public/design.html
@@ -7,7 +7,7 @@
   <div class="section panel">
     <h2>Chat Templates</h2>
     <ul>
-      <li><a href="/design/chat-client.html">Chat Client</a></li>
+      <li><a href="/design/chat-client.html">chat-client Page</a></li>
     </ul>
 
   </div>
