--- a/chat/chat-client/tools/public/index.html
+++ b/chat/chat-client/tools/public/index.html
@@ -2,7 +2,7 @@
 
 <div id="content">
   <div class="hero-unit">
-    <h1>chat client</h1>
+    <h1>chat-client</h1>
     <p>
       Congratulations! You have created and run a new Pedestal
       application.
@@ -14,6 +14,11 @@
       control panel can be configured in <code>config/config.clj</code>.
     </p>
 
+    <p class="small" style="font-weight:bold">
+      Start working on your application by writing its behavior in the
+      file <code>app/src/chat_client/behavior.clj</code>.
+    </p>
+
     <h4>Design</h4>
     <small>
       View template files located
@@ -23,7 +28,8 @@
     <h4>Data UI</h4>
     <small>
       After creating application behavior, run the application in the
-      browser using the data renderer. 
+      browser using the data renderer. The data renderer is setup in
+      the file <code>app/src/chat_client/simulated/start.clj</code>.
     </small>
     <h4>Render</h4>
     <small>
@@ -35,8 +41,9 @@
     <h4>Development</h4>
     <small>
       The development view allows you do run your application with a
-      real renderer and feeder. The application will be compiled in
-      development mode for easier debugging.
+      real renderer and feeder. This application is created in
+      <code>app/src/chat_client/start.clj</code>. The application
+      will be compiled in development mode for easier debugging.
     </small>
     <h4>Fresh</h4>
     <small>
