--- a/chat/chat-client/tools/public/index.html
+++ b/chat/chat-client/tools/public/index.html
@@ -11,7 +11,7 @@
       Hover over the lower right corner of each page to activate the
       control panel. In each view, update source files and then reload
       the page to build and see changes. The items that appear in the
-      control panel can be configured in <code>config/config.clj</code>.
+      control panel can be configured in <code>config/config.edn</code>.
     </p>
 
     <p class="small" style="font-weight:bold">
@@ -36,7 +36,7 @@
       The data renderer allows you to record the data which is sent to
       a renderer. The Render view allows you to play back these
       recordings. Configure the renderer to use
-      in <code>config/config.clj</code>.
+      in <code>config/config.edn</code>.
     </small>
     <h4>Development</h4>
     <small>
